--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Ever since I was young, I’ve been passionate about exploring the world of technology. Over time, this
+        <p>I am Zolfa Mohamed,Ever since I was young, I’ve been passionate about exploring the world of technology. Over time, this
           curiosity grew into a career path—I became a Full Stack Developer who enjoys creating complete, functional
           websites from the ground up.
 
@@ -132,14 +132,14 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn <i
                         class="bi bi-linkedin"></i></span>:</strong><a
                       href="https://www.linkedin.com/in/zolfa-mohamed-mahmoud-0878a2312/">Click Here</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201069748636</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+20 106 974 8636</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Asyut,Egypt</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's degree</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>zolfafarghaly@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:zolfafarghaly@gmail.com">zolfafarghaly@gmail.com</a></span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -267,8 +267,8 @@
               </p>
               <ul>
                 <li>Asyut,Egypt</li>
-                <li>+201069748636</li>
-                <li>zolfafarghaly@gmail.com</li>
+                <li>+20 106 974 8636</li>
+                <li><a href="mailto:zolfafarghaly@gmail.com">zolfafarghaly@gmail.com</a></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -579,7 +579,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>zolfafarghaly@gmail.com</p>
+                <p><a href="mailto:zolfafarghaly@gmail.com">zolfafarghaly@gmail.com</a></p>
               </div>
             </div><!-- End Info Item -->
 
